# tobby-lie.github.io

./: .gitignore  CNAME  Cargo.toml  Dioxus.toml  README.md  RNNMusicProject.html  config.toml  config.yml  custom.css  generic.html  index.html  index.md  robots.txt  sitemap.xml
.github/workflows/: site-cd.yaml  site-ci.yaml
about/: index.html
assets/styles/: main.css
content/: _index.md  hello-world.md
content/about/: _index.md
content/posts/: first-post.md  second-post.md  sqlalchemy-autobegin.md
css/: app.css
hello-world/: index.html
page/1/: index.html
posts/: index.html
posts/hello-world/: index.html
posts/sqlalchemy-autobegin/: index.html
projects/CapAttack/: index.html
projects/FiberOptics/: index.html
projects/ParanormalReality/: index.html
projects/RNNMusic/: index.html
projects/RussianDisinformation/: index.html  lda.html
public/css/: style.css
sqlalchemy-autobegin/: index.html
src/: main.rs
src/blog/: post1.md
src/components/: app.rs  blog_link.rs  home.rs  markdown.rs  mod.rs  post.rs
static/css/: style.css
templates/: base.html  index.html  page.html  section.html
